--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 /* Fonts and smooth*/
 html {
   font-family: Montserrat, "sans-serif";
@@ -44,6 +45,10 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
+  background-color: #0D0714;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -52,6 +57,14 @@ button,
 textarea,
 select {
   font: inherit;
+}
+
+#root {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container {
