--- a/css/todo.css
+++ b/css/todo.css
@@ -1,23 +1,60 @@
 #todo {
-  margin: 50px 0 50px 0;
+  background-color: #2b2433;
+  padding: 50px 60px;
+  border-radius: 20px;
+  height: auto;
 }
-#todo .todo__container .edit-input {
-  margin-top: 20px;
+#todo #top .close-edit {
+  display: none !important;
 }
-#todo .todo__container .edit-input form {
+#todo #top .open-edit {
+  display: flex;
+}
+#todo #top .edit-input {
+  margin-top: 15px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 20px;
+  gap: 10px;
 }
-#todo .todo__container .edit-input form input {
-  font-size: 18px;
+#todo #top .edit-input input {
+  padding: 7px 15px;
+  background-color: transparent;
   width: 90%;
+  border: 1px solid #9E78CF;
+  border-radius: 5px;
+  color: white;
   outline: none;
+  font-family: Montserrat, "sans-serif";
 }
-#todo .todo__container .edit-input form .update {
+#todo #top .edit-input input::-moz-placeholder {
+  font-family: Montserrat, "sans-serif" !important;
+}
+#todo #top .edit-input input::placeholder {
+  font-family: Montserrat, "sans-serif" !important;
+}
+#todo #top .edit-input button {
   width: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 7px;
+  background-color: transparent;
+  background-color: #9E78CF;
+  border: 1px solid #9E78CF;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+  color: white;
+  font-weight: 500;
 }
-#todo .todo__container .edit-close {
-  display: none;
+#todo #top .edit-input button:hover {
+  background-color: #7b54ad;
+  border: 1px solid #7b54ad;
+}
+#todo h3 {
+  color: white;
+  font-size: 18px;
+  margin-top: 30px;
+  margin-bottom: 10px;
 }
